# tsooyts

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spaac_display.py  tsooyts.service  tsooyts_display.py
.github/workflows/: tests.yml
docs/: installation_guide.md  prompts.md  sticks.odg  troubleshooting.md  user_guide.md
src/tsooyts/: __init__.py  display.py
tests/: conftest.py  test_constants.py  test_ir_reader.py  test_json_helpers.py  test_main_display.py  test_repeat_controller.py  test_settings_dialog.py  test_version.py
